# aka-rk3588

./: CMakeLists.txt  README.md  build_rk3588.sh  tennis.cpp  test_cmds.cpp  test_cmds.hpp
3rd/utils/: image_utils.c
3rd/yolov8_src/: postprocess.cc  postprocess.h
3rd/yolov8_src/rknpu2/: yolov8.cc
arm/: arm.cpp  arm.hpp
detect/: detect.cpp
motor/: motor.cpp  motor.hpp
